--- a/client/src/Pages/SignUp.css
+++ b/client/src/Pages/SignUp.css
@@ -5,7 +5,7 @@
   max-width: 400px;
   margin: auto;
   padding: 30px;
-  background-color: #2d3748; /* Dark background color */
+  background-color: #4a5568; /* Dark background color */
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
